# Parse-Resume

./: 01_data_extraction.ipynb  02_EDA.ipynb  03_parser.ipynb  03_parser_bert.ipynb  04_parser_gpt.ipynb  05_parser_llama.ipynb  GPT_version.ipynb  Llama.ipynb  README.md  pyproject.toml  requirements.txt
