[tool.poetry]
name = "resume parser"
version = "0.1.0"
description = ""
authors = ["Henil Gajjar <henilgajjar08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
pandas = "^2.2.3"
pdfplumber = "^0.11.6"
seaborn = "^0.13.2"
contractions = "^0.1.73"
datasets = "^3.5.0"
torch = "^2.6.0"
transformers = "^4.51.0"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
