[tool.poetry]
name = "resume-parser"
version = "0.1.0"
description = ""
authors = ["Henil Gajjar <henilgajjar08@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
numpy = "1.26.4"  # Ensure using a stable version
pandas = "^2.2.3"
pdfplumber = "^0.11.6"
seaborn = "^0.13.2"
contractions = "^0.1.73"
datasets = "^3.5.0"
torch = "2.1.0"  # I recommend using torch 2.1.0, since it works well with numpy 1.26.x
transformers = "4.37.2"
scikit-learn = "^1.6.1"
hf-xet = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
